force-app/main/default/objects/RMA_Device_Detail__c/RMA_Device_Detail__c.object-meta.xml
<CustomObject>
    <label>RMA Device Detail</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RMA Device Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Device Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>