force-app/main/default/objects/RMA_Device_Detail__c/fields/Cause_Code__c.field-meta.xml
<CustomField>
    <fullName>Cause_Code__c</fullName>
    <description>Cause Code Value that is determined upon doing Root Cause Analysis and Corrective Action implementation for RMA Cases</description>
    <inlineHelpText>Cause Code</inlineHelpText>
    <label>Cause Code</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>