force-app/main/default/objects/RMA_Device_Detail__c/fields/Device_Family__c.field-meta.xml
<CustomField>
    <fullName>Device_Family__c</fullName>
    <label>Device Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MYCRO</fullName>
            </value>
            <value>
                <fullName>MERGE</fullName>
            </value>
            <value>
                <fullName>SENSE</fullName>
            </value>
            <value>
                <fullName>TOUCH</fullName>
            </value>
            <value>
                <fullName>SENSE2</fullName>
                <label>SENSE 2</label>
            </value>
            <value>
                <fullName>TOUCH2</fullName>
                <label>TOUCH 2</label>
            </value>
            <value>
                <fullName>TOUCH LITE</fullName>
            </value>
            <value>
                <fullName>TITAN</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>MERGE 2</fullName>
            </value>
            <value>
                <fullName>TFACE</fullName>
            </value>
            <value>
                <fullName>TITAN GEN 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>