force-app/main/default/objects/RMA_Device_Detail__c/fields/Device_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Device_Serial_Number__c</fullName>
    <label>Device Serial Number</label>
    <type>TextArea</type>
</CustomField>