force-app/main/default/objects/RMA_Device_Detail__c/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Device_Family__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>CR+</fullName>
            </value>
            <value>
                <fullName>CREDENCE TAB</fullName>
            </value>
            <value>
                <fullName>FP1</fullName>
            </value>
            <value>
                <fullName>FP1X</fullName>
            </value>
            <value>
                <fullName>FP2</fullName>
            </value>
            <value>
                <fullName>FP21</fullName>
            </value>
            <value>
                <fullName>FP21X</fullName>
            </value>
            <value>
                <fullName>FP22</fullName>
            </value>
            <value>
                <fullName>FP22+</fullName>
            </value>
            <value>
                <fullName>FP22W</fullName>
            </value>
            <value>
                <fullName>FP22X</fullName>
            </value>
            <value>
                <fullName>FP2X</fullName>
            </value>
            <value>
                <fullName>FP3</fullName>
            </value>
            <value>
                <fullName>FP3X</fullName>
            </value>
            <value>
                <fullName>FP4</fullName>
            </value>
            <value>
                <fullName>FP4+</fullName>
            </value>
            <value>
                <fullName>FP4X</fullName>
            </value>
            <value>
                <fullName>FP5</fullName>
            </value>
            <value>
                <fullName>FP5X</fullName>
            </value>
            <value>
                <fullName>FPL1</fullName>
            </value>
            <value>
                <fullName>FPL1X</fullName>
            </value>
            <value>
                <fullName>FPL2</fullName>
            </value>
            <value>
                <fullName>FPL21</fullName>
            </value>
            <value>
                <fullName>FPL21X</fullName>
            </value>
            <value>
                <fullName>FPL22</fullName>
            </value>
            <value>
                <fullName>FPL22X</fullName>
            </value>
            <value>
                <fullName>FPL2X</fullName>
            </value>
            <value>
                <fullName>FPL3</fullName>
            </value>
            <value>
                <fullName>FPL3X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>