force-app/main/default/objects/RMA_Device_Detail__c/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <label>Firmware Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.1.6.0</fullName>
            </value>
            <value>
                <fullName>1.1.7.1</fullName>
            </value>
            <value>
                <fullName>1.2.3.0</fullName>
            </value>
            <value>
                <fullName>1.2.6.0</fullName>
            </value>
            <value>
                <fullName>1.2.12.0</fullName>
            </value>
            <value>
                <fullName>1.2.14.0</fullName>
            </value>
            <value>
                <fullName>1.2.20.0</fullName>
            </value>
            <value>
                <fullName>1.3.0.0</fullName>
            </value>
            <value>
                <fullName>1.4.0.0</fullName>
            </value>
            <value>
                <fullName>1.4.9.0</fullName>
            </value>
            <value>
                <fullName>1.4.10.0</fullName>
            </value>
            <value>
                <fullName>1.5.0.0</fullName>
            </value>
            <value>
                <fullName>1.5.5.8</fullName>
            </value>
            <value>
                <fullName>1.6.0.0</fullName>
            </value>
            <value>
                <fullName>1.5.2.6</fullName>
            </value>
            <value>
                <fullName>2.1.0.0</fullName>
            </value>
            <value>
                <fullName>2.2.0.0</fullName>
            </value>
            <value>
                <fullName>2.2.50.0</fullName>
            </value>
            <value>
                <fullName>1.7.0.0</fullName>
            </value>
            <value>
                <fullName>1.8.0.0</fullName>
            </value>
            <value>
                <fullName>2.2.16.0</fullName>
            </value>
            <value>
                <fullName>2.3.0.0</fullName>
            </value>
            <value>
                <fullName>2.3.5.0</fullName>
            </value>
            <value>
                <fullName>1.9.0.0</fullName>
            </value>
            <value>
                <fullName>1.9.3.0</fullName>
            </value>
            <value>
                <fullName>2.4.0.0</fullName>
            </value>
            <value>
                <fullName>2.4.3.0</fullName>
            </value>
            <value>
                <fullName>1.9.20.0</fullName>
            </value>
            <value>
                <fullName>1.9.10.0</fullName>
            </value>
            <value>
                <fullName>2.3.7.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>