force-app/main/default/objects/RMA_Device_Detail__c/fields/MAC_Address__c.field-meta.xml
<CustomField>
    <fullName>MAC_Address__c</fullName>
    <label>MAC Address</label>
    <type>TextArea</type>
</CustomField>