force-app/main/default/objects/RMA_Device_Detail__c/fields/of_Devices__c.field-meta.xml
<CustomField>
    <fullName>of_Devices__c</fullName>
    <label># of Devices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>