force-app/main/default/objects/RMA_Device_Detail__c/fields/Original_SO_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_SO_Number__c</fullName>
    <description>Required at the time of generating the RMA.</description>
    <label>Original SO Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>