force-app/main/default/objects/RMA_Device_Detail__c/fields/RMA_Problem_Reported_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>RMA_Problem_Reported_By_Customer__c</fullName>
    <description>Mention a brief (single line statement) on the problem reported by customer for RMA</description>
    <inlineHelpText>Mention a brief (single line statement) on the problem reported by customer for RMA</inlineHelpText>
    <label>RMA Problem Reported By Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>