force-app/main/default/objects/RMA_Device_Detail__c/fields/RMA_Repair_Cost__c.field-meta.xml
<CustomField>
    <fullName>RMA_Repair_Cost__c</fullName>
    <label>RMA Repair Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>