force-app/main/default/objects/RMA_Device_Detail__c/fields/Service_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_External_Id__c</fullName>
    <label>Service External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>