force-app/main/default/objects/RMA_Device_Detail__c/fields/Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date__c</fullName>
    <description>Shipping date of the Devices</description>
    <label>Shipping Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>