force-app/main/default/objects/RMA_Device_Detail__c/fields/Warranty_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Date__c</fullName>
    <description>Required to enter Warranty date of the devices</description>
    <label>Warranty Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>