force-app/main/default/objects/RMA_Device_Detail__c/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <label>Warranty Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mixed Warranty</fullName>
            </value>
            <value>
                <fullName>Out of Warranty</fullName>
            </value>
            <value>
                <fullName>Under Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>